Lowercase User controller methods
